fixed Print Layout Issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,12 @@ body {
   align-items: center;
 }
 
+@page {
+  /* size: 7in 9.25in;
+  margin: 0mm 0mm 0mm 0mm; */
+  margin: 0 !important;
+}
+
 .page {
   /*  width: 21cm;
   height: 29.7cm;
@@ -23,6 +29,7 @@ body {
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   color: gray;
+  page-break-after: always;
   &:first-child{
     margin-top: 80px;
   }
